--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,5 @@ dmypy.json
 *.props
 Integration/obj/Debug/netstandard2.0/Py_embedded_v37.csproj.FileListAbsolute.txt
 Integration/obj/Debug/netstandard2.0/Py_embedded_v37.csproj.FileListAbsolute.txt
+*.cache
+*.props
